--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>OnePASS - Password Manager</title>
+<title>Source Weather</title>
 
 <!-- Bootstrap -->
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- <link href="css/cover.css" rel="stylesheet" type="text/css"> -->
+<!-- Font Awesome -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
+<!-- Custom -->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!-- IE9 -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -20,20 +20,27 @@
 </head>
 <body>
 
-    <div class="site-wrapper">
+
+<header>
+		<div class="container">
+			<!-- LOGO -->
+			<div class="row">
+				<div class="col-md-12">
+					<img class="img-responsive" src="img/logo-2.png" alt="source-weather-logo">
+				</div> <!-- col-md-12 -->
+			</div> <!-- /row -->
+
+			<!-- GitHub -->
+			<div id="github">
+				<a href="http://github.com">
+				<i class="fa fa-github fa-lg"></i>
+				</a><span class="icon-text-slide">Contribute</span>
+			</div> <!-- /github -->
+		</div> <!-- /container -->
+
+</header>
 
 
-	<header>
-		<h1>source <span class="glyphicon glyphicon-cloud"></span> weather</h1>
-	</header>
-
-
-
-
-
- 
-
-    </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script src="js/password-create.js"></script>
