--- a/index.html
+++ b/index.html
@@ -36,14 +36,25 @@
 				<i class="fa fa-github fa-lg"></i>
 				</a><span class="icon-text-slide">Contribute</span>
 			</div> <!-- /github -->
+			
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<h3 id="city-title">City Goes Here</h3>
+			</div>
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<h3 id="city-title">Temp Goes Here</h3>
+			</div>
+
+
 		</div> <!-- /container -->
+
+
 
 </header>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<script src="js/password-create.js"></script>
+<script src="js/main.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
