--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Source Weather</title>
+<title>WEATHER</title>
 
 <!-- Bootstrap -->
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
 			<!-- GitHub -->
 			<div id="github">
-				<a href="http://github.com">
+				<a href="https://github.com/ChrisL108/source_weather" target="_blank">
 				<i class="fa fa-github fa-lg"></i>
 				</a><span class="icon-text-slide">Contribute</span>
 			</div> <!-- /github -->
@@ -41,7 +41,7 @@
 				<h3 id="city-title">City Goes Here</h3>
 			</div>
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h3 id="city-title">Temp Goes Here</h3>
+				<h3 id="city-temp">Temp Goes Here</h3>
 			</div>
 
 
