fadeIn/Out github

--- a/index.html
+++ b/index.html
@@ -30,26 +30,32 @@
 				</div> <!-- col-md-12 -->
 			</div> <!-- /row -->
 
-			<!-- GitHub -->
+			<!-- GitHub Link -->
 			<div id="github">
 				<a href="https://github.com/ChrisL108/source_weather" target="_blank">
 				<i class="fa fa-github fa-lg"></i>
-				</a><span class="icon-text-slide">Contribute</span>
-			</div> <!-- /github -->
-			
-			<div class="col-md-6 col-md-offset-3 text-center">
-				<h3 id="city-title">City Goes Here</h3>
+				</a><span id="contribute">Contribute</span>
 			</div>
-			<div class="col-md-6 col-md-offset-3 text-center">
-				<h3 id="city-temp">Temp Goes Here</h3>
-			</div>
-
-
+			<!-- City -->
 		</div> <!-- /container -->
 
-
-
 </header>
+
+<main>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<span>Close city: </span>
+				<h3 id="city-title">City Goes Here</h3>
+			</div>
+			<!-- Temperature -->
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<span>Temp: </span>
+				<h3 id="city-temp">Temp Goes Here</h3>
+			</div>
+		</div>
+	</div>
+</main>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
