add .gitignore and add DS_Store

--- a/index.html
+++ b/index.html
@@ -22,21 +22,19 @@
 
 
 <header>
+		<!-- GitHub Link -->
+		<div id="github">
+			<a href="https://github.com/ChrisL108/source_weather" target="_blank">
+			<i class="fa fa-github fa-lg"></i>
+			</a><span id="contribute">Contribute</span>
+		</div>
 		<div class="container">
 			<!-- LOGO -->
 			<div class="row">
 				<div class="col-md-12">
 					<img class="img-responsive" src="img/logo-2.png" alt="source-weather-logo">
 				</div> <!-- col-md-12 -->
-			</div> <!-- /row -->
-
-			<!-- GitHub Link -->
-			<div id="github">
-				<a href="https://github.com/ChrisL108/source_weather" target="_blank">
-				<i class="fa fa-github fa-lg"></i>
-				</a><span id="contribute">Contribute</span>
-			</div>
-			<!-- City -->
+			</div> <!-- /row -->			
 		</div> <!-- /container -->
 
 </header>
@@ -44,17 +42,18 @@
 <main>
 	<div class="container">
 		<div class="row">
+			<!-- City -->
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<span>Close city: </span>
-				<h3 id="city-title">City Goes Here</h3>
+				<h3 id="city-title">City</h3>
 			</div>
 			<!-- Temperature -->
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<span>Temp: </span>
-				<h3 id="city-temp">Temp Goes Here</h3>
+				<h3 id="city-temp">Temperature</h3>
 			</div>
-		</div>
-	</div>
+		</div><!-- /row -->
+	</div><!-- /container -->
 </main>
 
 
