--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
 <!-- Custom -->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 <!-- IE9 -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -40,17 +41,17 @@
 </header>
 
 <main>
-	<div class="container">
+	<div class="container" id="main-section">
 		<div class="row">
 			<!-- City -->
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<span>Close city: </span>
-				<h3 id="city-title">City</h3>
+				<h1>City: </h1>
+				<span id="city-title">City</span>
 			</div>
 			<!-- Temperature -->
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<span>Temp: </span>
-				<h3 id="city-temp">Temperature</h3>
+				<h1>Temp: </h1>
+				<span id="city-temp">Temperature</span>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
