--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>WEATHER</title>
+<meta description="weather app that finds weather based on user's latitude and longitude">
+<title>Source Weather</title>
 
 <!-- Bootstrap -->
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 <!-- Font Awesome -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
+<!-- Font -->
+<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 <!-- Custom -->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
-<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 <!-- IE9 -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -45,23 +47,22 @@
 		<div class="row">
 			<!-- City -->
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h1>City: </h1>
-				<span id="city-title">City</span>
+				<span id="city-title">City</span> <br>
+				<span class="glyphicon glyphicon-chevron-down"></span>
 			</div>
 			<!-- Temperature -->
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h1>Temp: </h1>
-				<span id="city-temp">Temperature</span>
+				<span id="city-temp">Temperature</span> &amp;
+				<span id="weatherSum">Conditions</span>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
 </main>
 
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<!-- jQuery & jQuery UI --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="js/main.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
