--- a/index.html
+++ b/index.html
@@ -23,14 +23,23 @@
 </head>
 <body>
 
+Clouds
+<span class="glyphicon glyphicon-cloud"></span>
+Globe
+<span class="glyphicon glyphicon-globe"></span>
+Lightning
+<span class="glyphicon glyphicon-flash"></span>
+
+<!-- GitHub Link -->
+<div id="github">
+	<a href="https://github.com/ChrisL108/source_weather" target="_blank">
+	<i class="fa fa-github fa-lg"></i>
+	</a><span id="contribute">Contribute</span>
+</div>
+
+<div id="content-wrapper">
 
 <header>
-		<!-- GitHub Link -->
-		<div id="github">
-			<a href="https://github.com/ChrisL108/source_weather" target="_blank">
-			<i class="fa fa-github fa-lg"></i>
-			</a><span id="contribute">Contribute</span>
-		</div>
 		<div class="container">
 			<!-- LOGO -->
 			<div class="row">
@@ -58,6 +67,8 @@
 		</div><!-- /row -->
 	</div><!-- /container -->
 </main>
+
+</div> <!-- /content-wrapper -->
 
 
 <!-- jQuery & jQuery UI --> 
