start to add functionality for animating changing weather

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
 </head>
 <body>
 
-Clouds
-<span class="glyphicon glyphicon-cloud"></span>
-Globe
-<span class="glyphicon glyphicon-globe"></span>
-Lightning
-<span class="glyphicon glyphicon-flash"></span>
+<section id="weatherIcons">
+	<!-- Clouds -->
+	<span class="glyphicon glyphicon-cloud"></span>
+	<!-- Globe -->
+	<span class="glyphicon glyphicon-globe"></span>
+	<!-- Lightning -->
+	<span class="glyphicon glyphicon-flash"></span>
+	<!-- Rain -->
+	<i class="fa fa-tint"></i>
+</section>
 
 <!-- GitHub Link -->
 <div id="github">
@@ -37,7 +41,7 @@ Lightning
 	</a><span id="contribute">Contribute</span>
 </div>
 
-<div id="content-wrapper">
+<div id="content-wrapper" class="container-fluid">
 
 <header>
 		<div class="container">
