--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<section id="weatherIcons" style="display:none;">
+<section id="weatherIcons" >
 	<!-- Clouds -->
 	<span class="glyphicon glyphicon-cloud"></span>
 	<!-- Globe -->
