--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 	</div>
 	<div id="mist" class="weather-icons">
 		<i id="mist1" class="fa fa-cloud fa-2x" aria-hidden="true"></i>
-		<i id="mist2" class="fa fa-cloud fa-3x" aria-hidden="true"></i>
-		<i id="mist3" class="fa fa-cloud fa-4x" aria-hidden="true"></i>
-		<i id="mist4" class="fa fa-cloud fa-3x" aria-hidden="true"></i>
+		<i id="mist2" class="fa fa-cloud" aria-hidden="true"></i>
+		<i id="mist3" class="fa fa-cloud fa-2x" aria-hidden="true"></i>
+		<i id="mist4" class="fa fa-cloud" aria-hidden="true"></i>
 	</div>
 	
 
@@ -81,7 +81,7 @@
 		<button class="btn" id="clouds-btn">Clouds</button>
 		<button class="btn" id="rain-btn">Rain</button>
 		<button class="btn" id="snow-btn">Snow</button>
-		<button class="btn" id="mist-btn">Mist (in-progress)</button>
+		<button class="btn" id="mist-btn">Mist / Haze</button>
 	</div>
 
 
